fixed horizontal overflow of html

--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,11 @@
-* {
+/* * {
   border: 1px solid lightgrey;
+} */
+html {
+  width: 100vw;
+  height: 100vh;
+  overflow-x: hidden;
 }
-
 body {
   display: flex;
   flex-direction: column;
@@ -9,10 +13,16 @@ body {
   overflow: none;
 }
 header {
+  background-color: lightgrey;
+  outline: 1px solid black;
+  outline-offset: -3px;
+  outline-style: double;
+  border: 1px solid black;
   display: flex;
   flex-direction: column;
   align-items: center;
   width: 80vw;
+  filter: drop-shadow(.25em .25em 2px black);
 }
 #headerToolTip {
   display: none;
@@ -24,6 +34,7 @@ header {
   display: flex;
   flex-direction: column;
   outline: 2px solid black;
+  filter: drop-shadow(.2em .2em 3px black);
 }
 #subjectNav {
   list-style: none;
@@ -65,6 +76,7 @@ main {
   flex-direction: row;
   flex-wrap: nowrap;
   justify-content: center;
+  align-items: baseline;
   width: 95vw;
 }
 .topicDiv {
@@ -76,6 +88,8 @@ main {
   justify-content: space-between;
   visibility: hidden;
   overflow-y: hidden;
+  border: 3px solid black;
+  border-radius: 15px;
 }
 .topicDiv.center {
   display: flex;
@@ -117,4 +131,7 @@ main {
 .article {
   height: 15vh;
   padding: 1em;
+}
+#footerDescription {
+  display: none;
 }
